fix(Fix number of hosts in the CostsExample):
The number of hosts was not enough to place the VMs and the simulation was in loop.

Signed-off-by: Manoel Campos <manoelcampos@gmail.com>